src/test/ui/issues/issue-50577.stderr
error[E0744]: `match` is not allowed in a `const`
  --> $DIR/issue-50577.rs:3:16
   |
LL |         Drop = assert_eq!(1, 1)
   |                ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0744]: `if` is not allowed in a `const`
  --> $DIR/issue-50577.rs:3:16
   |
LL |         Drop = assert_eq!(1, 1)
   |                ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0744]: `match` is not allowed in a `const`
  --> $DIR/issue-50577.rs:3:16
   |
LL |         Drop = assert_eq!(1, 1)
   |                ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0317]: if may be missing an else clause
  --> $DIR/issue-50577.rs:3:16
   |
LL |         Drop = assert_eq!(1, 1)
   |                ^^^^^^^^^^^^^^^^
   |                |
   |                expected (), found isize
   |                found here
   |
   = note: expected type `()`
              found type `isize`
   = note: `if` expressions without `else` evaluate to `()`
   = help: consider adding an `else` block that evaluates to the expected type
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0317, E0744.
For more information about an error, try `rustc --explain E0317`.
